# Study

./: settings.gradle
Base/: build.gradle  consumer-rules.pro  proguard.md
Base/src/androidTest/java/com/sydauto/base/: ExampleInstrumentedTest.java
Base/src/main/: AndroidManifest.xml
Base/src/main/java/com/sydauto/base/mvp/: BaseActivity.java  BaseService.java  BaseSydActivity.java  BaseView.java
Base/src/main/java/com/sydauto/base/utils/: AppManager.java
Base/src/test/java/com/sydauto/base/: ExampleUnitTest.java
app/: Californium.properties  build.gradle
app/libs/coding-279/ff_filter/libs/: libavdevice.58.9.101.dylib  libavdevice.58.dylib  libavformat.58.35.101.dylib  libavformat.dylib  libavutil.56.36.101.dylib  libavutil.56.dylib  libpostproc.55.dylib  libswresample.3.dylib  libswscale.5.6.100.dylib  libswscale.5.dylib
app/libs/coding-279/player/: player6.c
app/src/androidTest/java/com/sydauto/study/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/sydauto/study/: MainActivity.java  RegisterDemo.java  RegisterDemo2.java  SydVideoManager.java
app/src/main/java/com/sydauto/study/mvp/: IMvpService.java  MvpServiceImpl.java  SydMvpController.java  SydUpload.java
app/src/main/java/com/sydauto/study/utils/: FFUtils.java
app/src/main/java/com/sydauto/study/video/utils/: FFUtils.java
app/src/main/java/com/sydauto/study/video/widget/: FFVideoView.java
app/src/main/java/com/sydauto/study/widget/: FFVideoView.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/sydauto/study/: ExampleUnitTest.java
coap-jmeter/libs/maven-archiver/: pom.properties
gradle/wrapper/: gradle-wrapper.properties
